@@ -80,21 +80,25 @@ public class CharBox extends Box {
         width += italic;
         italic = 0;
     }
-    
+
     public void draw(Graphics2D g2, float x, float y) {
-	drawDebug(g2, x, y);
-	AffineTransform at = g2.getTransform();
+        drawDebug(g2, x, y);
+        AffineTransform at = g2.getTransform();
         g2.translate(x, y);
-	Font font = FontInfo.getFont(cf.fontId);
-        if (size != 1) {
-	    g2.scale(size, size);
-	}
+        Font font = FontInfo.getFont(cf.fontId);
+
+        if (Math.abs(size - TeXFormula.FONT_SCALE_FACTOR) > TeXFormula.PREC) {
+            g2.scale(size / TeXFormula.FONT_SCALE_FACTOR,
+                    size / TeXFormula.FONT_SCALE_FACTOR);
+        }
+
         if (g2.getFont() != font) {
-	    g2.setFont(font);
-	}
-	arr[0] = cf.c;
-	g2.drawChars(arr, 0, 1, 0, 0);
-	g2.setTransform(at);
+            g2.setFont(font);
+        }
+
+        arr[0] = cf.c;
+        g2.drawChars(arr, 0, 1, 0, 0);
+        g2.setTransform(at);
     }
     
     public int getLastFontId() {
