@@ -1,3 +1,6 @@
+jlatexmath (1.0.7)
+	* Fix deformed characters in SVG output by changing font scaling
+
 jlatexmath (1.0.6)
 	* Add TeX style macros \bangle, \brace and \brack.
 
